<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textSize="40sp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/title"
            android:drawableEnd="@drawable/icon_user_card"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="80dp"
            android:layout_alignTop="@+id/username"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/icon_lock"/>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:hint="@string/firstname"
            android:inputType="text"
            android:layout_marginTop="80dp"
            android:layout_alignTop="@+id/password"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/icon_user"/>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:hint="@string/lastname"
            android:inputType="text"
            android:layout_marginTop="80dp"
            android:layout_alignTop="@+id/firstname"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/icon_user"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="80dp"
            android:layout_alignTop="@+id/lastname"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/icon_mail"/>

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/register"
            android:layout_alignTop="@+id/email"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:onClick="register"
            android:drawableEnd="@drawable/icon_register"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>