<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/todoLists">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/todoLists"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/titleTodo"
            android:gravity="center_horizontal"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignEnd="@+id/titleTodo"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icon_logout"
            android:onClick="logout"/>

        <ListView
            android:id="@+id/mobile_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/titleTodo"
            android:layout_alignBottom="@+id/addEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:paddingBottom="45dp">
        </ListView>

        <EditText
            android:id="@+id/addEdit"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:hint="@string/invitedUsername"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/newList"
            android:inputType="text"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="#5ADBA1"
            android:background="@drawable/button_bg_round"
            android:layout_alignEnd="@+id/addEdit"
            android:layout_alignTop="@+id/addEdit"
            android:drawableStart="@drawable/icon_share"
            android:padding="12dp"
            android:onClick="createAction"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>